# node-addon-sfml-audio

./: .editorconfig  .gitignore  CMakeLists.txt  binding.gyp  package-lock.json  package.json
CMakeModules/: Config.cmake  ImportLinuxTargets.cmake  ImportNodeTargets.cmake  ImportWindowsTargets.cmake  Vcpkg.cmake
scripts/: copy_addon.js
src/: lib.ts  sfml_audio.d.ts
src/addon/: listener.cpp  listener.h  main.cpp  mp3_reader.cpp  mp3_reader.h  music.cpp  music.h  param_helper.cpp  param_helper.h  sound.cpp  sound.h  soundbuffer.cpp  soundbuffer.h  soundsource_impl.cpp  soundsource_impl.h  soundstream_impl.cpp  soundstream_impl.h
